gwaripper_webGUI/static/style.css
/* ... */
.page-nav {
    position: fixed;
    top: 0%;
    height: 100%;
    display: flex;
    align-items: center;
    padding: 0 0.3em;
    font-size: 4em;
    font-weight: bold;
}
.page-nav:hover {
    color: #f34c4c;
    background-color: #7575750f;
}
#page-next {
    right: 0;
}
#page-prev {
    left: 0;
}
.button-leftmost {
    margin-left: 0;
}
.gwa-hidden {visibility:hidden;}
.gwa-visible {visibility:visible;}
.entry-container-top {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    justify-items: stretch; /* Aligns grid items along the inline (row) axis */
    align-items: stretch; /* Aligns grid items along the block (column) axis */
    justify-content: stretch; /* align the whole grid inside the container */
    align-content: start; /* vertically align the whole grid inside the container */
    /* padding: .5em .5em; */
    width: 100%;
    position: relative; /* for ribbon absolute positioning */
}
.entry-container {
    background-color: #1f1f1f;
    border: 1px solid #fff;
    margin: .5em 0;
}
.entry-container-title {
    margin: .5em .5em 0 .5em;
}
.entry-container-rating {
    margin: .5em .5em .2em .5em;
    justify-self: center;
    align-self: center;
}
.entry-container-artist {
    margin: .5em 0 .5em .5em;
    overflow: hidden;
    text-overflow: ellipsis;
    justify-self: start; /* horizontal */
    align-self: center; /* vert */
    color: #fff;
    font-size: 14px;
    font-weight: 600;
    background-color: #44a6f2;
    padding: 3px 6px;
    max-width: 95%; /* need space for ellipsis? */
}
.entry-container-date {
    margin: .5em;
    justify-self: end; /* horizontal */
    align-self: center; /* vert */
    font-size: 14px;
}
.entry-container .odd {
    background-color: #3c3c3c;
}
.entry-expand {
    border-top: 1px solid #fff;
}
.entry-expand .description {
    padding: .5em;
    flex-shrink: 1;
    flex-grow: 1;
}
.entry-expand-inner {
    width: 100%;
    display: flex;
    flex-wrap: nowrap;
    justify-content: space-between;
}
/* has to follow rule for .entry-expand-inner since selectors have the same spefificty otherwise
 * rule wouldn't be overwritten */
@media only screen and (max-width: 600px) {
    .entry-expand-inner {
        flex-wrap: wrap-reverse; /* so controls that follow the description and are normally placed on the right
                                  * end up on top of the description instead of at the bottom */
    }
}
.entry-expand-actions-wrap {
    padding: 0;
    display: flex;
    flex-wrap: wrap;
}
.entry-expand-actions {
    padding: .5em;
}
.entry-expand-icons {
    font-size: 1.5em;
}
.entry-expand .embeds-container {
    padding: .5em;
    width: 100%;
}
.entry-expand .embeds-container .selftxt-embed {
    width: 100%;
    overflow: hidden;
    text-overflow: ellipsis;
    overflow-wrap: break-word; /* break lines that are too long even mid-word */
}
.entry-expand .embeds-container .audio-embed {
    width: 100%;
}
.artist {
    color: #44a6f2;
}
.audio-embed audio {
    margin: .5em 0;
}

/* half-star rating start */
/* adapted from https://codepen.io/redlabor/pen/wyiAH */
/* Ratings widget */
.rate {
    display: inline-block;
    border: 0;
    position: relative;
}
/* Order correctly by floating highest to the right */
.rate > a {
    float: right;
    position: relative;
}
/* The star of the show */
.rate > a:before {
    display: inline-block;
    font-size: 1rem;
    padding: .3rem .1rem;
    margin: 0;
    cursor: pointer;
    font-family:"Font Awesome 5 Free";
    content: "\f005 "; /* full star */
}
/* BUG: hover on full star only registers once it's on the far right edge of the star */
/* Half star trick */
/* drops half star directly on the full start by using absolute positioning */
.rate .half:before {
    content: "\f089 "; /* half star no outline */
    position: absolute;
    padding-right: 0;
}
/* Click + hover color */
/* p1 ~ p2 -> sibling selector, selects all p2 following(after p1) children of the same parent
 * p1 + p2 -> adjacent selector, selects siblind that directly follows p1 */
.rate a.star-active,
.rate a.star-active ~ a, /* color current and previous stars on checked */
.rate a:hover, .rate a:hover ~ a { color: #e42323;  } /* color previous stars on hover */

/* Hover highlights */
.rate a.star-active + a:hover, .rate a.star-active ~ a:hover, /* highlight current and previous stars */
.rate a.star-active ~ a:hover ~ a, /* highlight previous selected stars for new rating */
.rate a:hover ~ a.star-active ~ a /* highlight previous selected stars */ { color: #e42323;  } 
/* BUG: sometimes color stops changing at a certain star using same color for now */

/* half-star rating end */

ul.flash-messages {
   list-style: none;
   margin-left: 0;
   padding-left: 1em;
}
li.info {
    font-size: 1em;
    font-family: 'Open Sans',sans-serif;
    color: #fff;
}
li.title {
    font-size: 18px;
    font-family: 'Open Sans',sans-serif;
    color: #fff;
    margin-bottom: 0.5em 0;
}
li.warning {
	font-size: 20px;
	color: #f67764; /* #f67764 */
}
ul.flash-messages a.underline {
    text-decoration: underline;
}

/* change placeholder for inputs */
::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
    color: #bdbdbd;
    opacity: 1; /* Firefox */
}

:-ms-input-placeholder { /* Internet Explorer 10-11 */
    color: #bdbdbd;
}

::-ms-input-placeholder { /* Microsoft Edge */
    color: #bdbdbd;
}
/* ... */

